Implemented next ques and prev ques functionality

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,12 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.App {
-  /* display: flex;
+/* .App {
+  display: flex;
   align-items: center;
-  justify-content: center; */
-  /* position: relative; */
-}
+  justify-content: center;
+  position: relative;
+} */
 
 /* LOADER */
 .app-spinner {
