--- a/src/styles/question.module.css
+++ b/src/styles/question.module.css
@@ -33,3 +33,19 @@
   color: white;
   cursor: pointer;
 }
+
+@media only screen and (min-width: 768px) {
+  .questionContainer {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .questionContainer {
+    width: 100%;
+  }
+
+  .question {
+    font-size: 12px;
+  }
+}
